# atomashcogl

./: .bazelrc  .gitignore  MODULE.bazel  README.md
docker/: BUILD  defs.bzl  entrypoint.sh
esp32_rules/: defs.bzl  esp32.bzl
hello_world/: BUILD
hello_world/main/: CMakeLists.txt
scripts/: bootstrap.py
toolchains/: BUILD  build_wrapper.sh  esp32_idf_container_toolchains.bzl
tools/: set_ws_stable_vars.sh
